# SpaceDex

./: README.md  desafio_individual_Espaco_Victor_refinado_final_Cut.ipynb  main.py  pyproject.toml
