[tool.poetry]
name = "spacedex"
version = "0.1.0"
description = "Classificador de objetos astronômicos"
authors = ["Victor Barradas Soares Doliveira doliveiraeg@hotmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
imblearn = "^0.0"
category-encoders = "^2.8.1"
kagglehub = "^0.3.11"
joblib = "^1.4.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
